--- a/sam-app/Makefile
+++ b/sam-app/Makefile
@@ -8,6 +8,7 @@ clean:
 
 build:
 	GOOS=linux GOARCH=amd64 go build -o hello-world/hello-world ./hello-world
+	GOOS=linux GOARCH=amd64 go build -o user-fetcher/user-fetcher ./user-fetcher
 
 package:
 	aws cloudformation package --template-file template.yaml --output-template-file output-template.yaml --s3-bucket lambda-go-sample-111
