--- a/sam-app/template.yaml
+++ b/sam-app/template.yaml
@@ -54,6 +54,19 @@ Resources:
           Properties:
             Path: /users
             Method: POST
+  UserDestroyerFunction:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      CodeUri: user-destroyer/
+      Handler: user-destroyer
+      Role: !Sub "arn:aws:iam::${AWS::AccountId}:role/LambdaGoSampleRole"
+      Tracing: Active # https://docs.aws.amazon.com/lambda/latest/dg/lambda-x-ray.html
+      Events:
+        CatchAll:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: /users/{name}/{age}
+            Method: DELETE
 
 Outputs:
   HelloWorldAPI:
