--- a/sam-app/Makefile
+++ b/sam-app/Makefile
@@ -11,6 +11,7 @@ build:
 	GOOS=linux GOARCH=amd64 go build -o user-fetcher/user-fetcher ./user-fetcher
 	GOOS=linux GOARCH=amd64 go build -o user-register/user-register ./user-register
 	GOOS=linux GOARCH=amd64 go build -o user-destroyer/user-destroyer ./user-destroyer
+	GOOS=linux GOARCH=amd64 go build -o echo/echo ./echo
 
 package:
 	aws cloudformation package --template-file template.yaml --output-template-file output-template.yaml --s3-bucket lambda-go-sample-111
